fixed text wrap and portfolio images

--- a/assets/css/Style1.css
+++ b/assets/css/Style1.css
@@ -71,7 +71,7 @@ text-decoration: none;
     margin-top: 25px;
 }
 
-nav a {
+nav, a {
     color: #999999;
     text-decoration: none;
     margin-left: 15px;
