--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,55 @@
 *  { 
     box-sizing: border-box;
 }
+
+#name   {
+    width: 255px;
+    height: 50px;
+    background:none;
+    float: left;
+    font-family: 'Georgia', Times, 'Times New Roman', Times, serif, serif;
+    text-align:left;
+    line-height: 50px;
+    border-left: px solid;
+    color:none;
+    font-weight: 700;
+    font-size: 30px;
+    padding-right: 10px;
+}
+
 .main-nav {
     width: 80%;
-    max-width: px;
+    max-width:px;
     margin: 0 auto;
     clear: both;
     font-size: 20px;
-}
-
-body {
-    background: url(assets\images\concrete_seamless.png);
-    font-size: 20px;
-    line-height: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777;
-    height: 100%;
-    margin: px;
-    padding: px;
-}
+    text-decoration: none;
+    }
 
 
 #container-top {
-    background: #fff;
-    margin: 0 0 0 30px;
+    border-bottom: 8px solid #4aaaa5;
+    margin: 0 0 30px;
     z-index: 99;
-    color:#fff;
     overflow: auto;
-    border-bottom: .5px solid #ccc;
     width: 100%;
+    display: inline-block;
+    background: #556666;
 }
-h1, h2, h3, p {
+
+body {
+    background:#fff;
+    font-size: 20px;
+    line-height: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777;
+    height: 0 auto;
+    margin: 0 auto;
+    padding: 0 auto;
+
+  
+}
+
+h1, p {
     margin-bottom: px;
 }
 
@@ -37,56 +57,58 @@ p:last-child {
     margin-bottom: 0;
 }
 
-h1, h2, h3 {
-    font-family: 'Georgia', Times, Times New Roman, serif;
+h1, h3 {
+    font-family: 'Georgia','Times New Roman', serif, sans-serif, serif;
     font-weight: 700;
     color: #4aaaa5;
-}
-
-h1 {
     font-size: 30px;
     line-height: 49px;
-    border-bottom: 3px solid #ddd;
+    padding-bottom: 5px;
+}
+h2 {
+    font-family: 'Georgia',times, 'Times New Roman', serif, sans-serif, serif;
+    font-weight: 700;
+    color: #fff;
+    font-size: 30px;
+    line-height: 49px;
     padding-bottom: 5px;
 }
 
-h2, h3 {
-    font-size: 30px;
+nav, a {
+    float:right;
+    margin-top: px;
+    color:#fff;
 }
-
-#name   {
-    width: 250px;
-    height: px;
-    background: #4aaaa5;
-    float: left;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    text-align: center;
-    line-height: px;
-    color: #fff;
-    font-weight: 700;
-    font-size: 30px;
-    text-decoration: none;
-
+.top-nav {
+    color:#777;
+    line-height: 50px;
+    
+    
 }
-nav {
-    float: right;
-    margin-top: 30px;
-}
+ 
 nav li {
-    color: #fff;
+    color: #777;
     text-decoration: none;
-    margin-left: 15px;
+    margin-left: 20px;
     display: inline-block;
     border-left: 1px solid #efefef;
     padding-left: 15px;
     line-height: 10px;
+    float: none;
+   
+    
 }
 nav li:first-child {
     border-left: 0 none;
 }
 
+ul {
+    float: left;
+    color: #777;
+}
 #main-container {
-    padding-top: 100px;
+    padding-top: 0px;
+    
 }
 
 .container-middle {
@@ -94,66 +116,96 @@ nav li:first-child {
     padding: 30px;
     margin: 30px;
     width: 80%;
-    max-width: 60%;
+    max-width: 58%;
     float: left;
     border: 1px solid #ddd;
-    
+    float: left;
+
 }
 
-.auth-image {
-    width:  150px;
-    height: auto;
-    margin-top: px;
-    float: none;
-    margin-right: 25px;
-    display: inline-block;
-}
 .sidebar{
     background:#fff;
     padding: 30px;
+    margin: 30px;
     width: 80%;
-    max-width: 33%;
+    max-width: 27%;
     float: right;
-    border: 1px solid #fff; 
-    margin-bottom: 20px; 
+    border: 1px solid #ddd;  
+    color: #4aaaa5;
 }
-
-h3, .sidebar, h2 {
-    border-bottom: 2px solid #eee;
-    padding-bottom: 20px;
-    margin-bottom: 15px;
-    line-height: 22px;
+.auth-image {
+    width:  250px;
+    height: 200px;
+    float: left;
+    margin: 0 10px;
+    content: "";
+    display: inline-block;
+    clear:both;
+     
 }
 
 .social {
-    width: 62px;
-    height: 62px;
+    width: 82px;
+    height: 86px;
     margin-top: 8px;
     margin-bottom: 5px;
 }
 
 .social:last-child {
-    margin-right: 2px;
+    margin-right: 2px;}
 
-}
+
+
 footer {
     background: #556666;
     color:#fff;
     padding: 30px 0;
     clear: both;
     border-top: 8px solid #4aaaa5;
-    color:#ccc;
     font-size: 12px;
     text-align: center;
     
 }
-.work {
-    width: 274px;
-    overflow: auto;
+
+.container {
+    background: #556666;
+    color:#fff;
+    padding: 30px 0;
+    clear: both;
+    font-size: 12px;
+    text-align: center;
     position: relative;
-    float: left;
-    margin: 20px 0 25px;
+    
 }
+
 .work:nth-child(even) {
     margin: 40px;
 }
+
+.container-middle {
+    float: left;
+    clear: both;
+   }
+   .work1, .work2, .work3, .work4, .work5 {
+       padding: 10px;
+       display: inline-block;
+       position: relative;
+       font-family: Arial;
+       width: 47%;
+       height: 75%;
+    }
+
+  
+  .text-block {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    background-color: #556666;
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-top:5px solid #4aaaa5;
+    width: inherit;
+    display: inline-block;
+  }
+  
